# CITE-seq-Count

./: .gitignore  CHANGELOG.md  pyproject.toml  test_cmd.sh
src/cite_seq_count/: __init__.py  __main__.py  io.py  logger.py  preprocessing.py  processing.py  secondsToText.py
tests/: __init__.py  test_io.py  test_preprocessing.py  test_processing.py  test_real_data.py
tests/test_data/real_data/: asapseq_ab_panel_v1_citeseq_count_formatted.csv  run_report.yaml
tests/test_data/real_data/uncorrected_cells/: dense_umis.tsv
